Further fixes for size issues Cropping letter grid image down to help with display size Making the instruction images size to height of the flex container

--- a/oswald_reading_span/frontend/src/css/instructions.css
+++ b/oswald_reading_span/frontend/src/css/instructions.css
@@ -27,10 +27,12 @@
 .purple-instruction-text {
   padding: 0 5px;
   border: 4px solid black;
+margin: 5px;
 }
 
 .orange-instruction-text {
   border-color: orange;
+  
 }
 
 .green-instruction-text {
@@ -55,5 +57,5 @@
 }
 
 .instruction-image {
-    width: 80%;
+    height: 100%;
 }
